tests/missing-instance.stderr
error: cannot display `A` on the screen
   ┌─ test:2:1
   │
 2 │ show Foo
   │ ^^^^ could not find instance `Show Foo`
   │
   ┌─ <dir>/std/io.wpl:26:17
   │
26 │ show :: A where (Show A) => A -> ()
   │                 -------- required by this bound here
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

